feature(perf): add optional c-s loader JVM safepoint logging
Throttled perf steps intermittently fail a fixed P99 threshold because of a
short (~1-2s) stall that the aggregate tail magnifies through
coordinated-omission correction. The cassandra-stress JVM frequently shows 0 GC
in those runs, so the GC log cannot explain the pause and there is no way to
tell a non-GC safepoint in the loader JVM (biased lock revocation, JIT
deoptimization, thread dump, monitor deflation, the periodic guaranteed
safepoint) apart from a server-side or network stall without eliminating
suspects over many reruns.

Add a cs_safepoint_logging flag that appends -Xlog:safepoint to the JVM_OPTS of
the cassandra-stress container, on top of whatever cs_extra_jvm_opts already
carries, so a single run can implicate or exonerate the loaders.

The log cannot simply be written inside the container - it is removed as soon as
the stress command is over. It is written into a file bind mounted from the
loader host, the same way the HDR file is, pulled into the loader log directory
once the stress thread is done (dropped when empty) and collected into the run
log archive by LoaderLogCollector next to the hdrh-*.hdr files.

The flag is off by default; enable it per pipeline for a diagnosis, after a
control run confirms the added logging does not move the baseline tail latency.
It is a no-op on k8s and prepared loaders, where JVM_OPTS is not injected, and
it now warns instead of silently doing nothing. It requires a JDK 11+ loader
image (the default one ships Temurin 21) - JDK 8 refuses to start a JVM with
-Xlog at all.

docs/performance-tests.md documents how to correlate a latency-step ERROR with
the safepoint log: the HDR interval, the safepoint+stats worst-case summary,
then the wall-clock grep, reading a large Total with a small "Reaching
safepoint" as a long VM operation and the reverse as threads slow to reach the
safepoint.

[SCT-468]

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.c